WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238657
Abort formatBlock command on null start or end selections
https://bugs.webkit.org/show_bug.cgi?id=238657
Summary
Abort formatBlock command on null start or end selections
Rob Buis
Reported
2022-04-01 01:26:57 PDT
Abort formatBlock command on null start or end selections
Attachments
Patch
(1.78 KB, patch)
2022-04-01 01:31 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2022-04-01 01:31:07 PDT
Created
attachment 456335
[details]
Patch
EWS
Comment 2
2022-04-01 07:12:48 PDT
Committed
r292219
(
249122@main
): <
https://commits.webkit.org/249122@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456335
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-01 07:13:15 PDT
<
rdar://problem/91160529
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug