Abort formatBlock command on null start or end selections https://bugs.webkit.org/show_bug.cgi?id=238657

Patch by Rob Buis <rbuis@igalia.com> on 2022-04-01
Reviewed by Wenson Hsieh.

Abort formatBlock command in case selectionForParagraphIteration
returns with a null start or end selection due to inline table specific
adjustments.

* editing/ApplyBlockElementCommand.cpp:
(WebCore::ApplyBlockElementCommand::doApply):


Canonical link: https://commits.webkit.org/249122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292219 268f45cc-cd09-0410-ab3c-d52691b4dbfc