Source/WebCore/editing/ApplyBlockElementCommand.cpp
@@ -78,10 +78,13 @@ void ApplyBlockElementCommand::doApply()
     }
 
     VisibleSelection selection = selectionForParagraphIteration(endingSelection());
+
     VisiblePosition startOfSelection = selection.visibleStart();
+    if (startOfSelection.isNull())
+        return;
     VisiblePosition endOfSelection = selection.visibleEnd();
-    ASSERT(!startOfSelection.isNull());
-    ASSERT(!endOfSelection.isNull());
+    if (endOfSelection.isNull())
+        return;
     RefPtr<ContainerNode> startScope;
     int startIndex = indexForVisiblePosition(startOfSelection, startScope);
     RefPtr<ContainerNode> endScope;
